--- a/miraire/css/page/character/character.scss
+++ b/miraire/css/page/character/character.scss
@@ -6,6 +6,96 @@
 header,footer{
     position: static;
 }
+
+// ヘッダーのレスポンシブ対応
+header{
+    @media(769px <= width){
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    h1{
+        text-align: center;
+        margin-bottom: 1rem;
+        @media(769px <= width){
+            margin-left: 3%;
+            text-align: start;
+            margin-bottom: 0;
+        }
+        img.logo{
+            width: 180px;
+            @media(769px <= width){
+                width: 250px;
+            }
+        }
+    }
+    nav{
+        ul{
+            display: flex;
+            justify-content: center;
+            gap: 1em;
+            li{
+                span{
+                    display: block;
+                    text-align: center;
+                }
+            }
+        }
+    }
+    a[href="./vote.php"]{
+        text-align: right;
+        margin-right: 3%;
+        position: relative;
+        z-index: 10;
+        @media(769px <= width){
+            text-align: start;
+        }
+        img.vote{
+            width: 70px;
+            position: relative;
+            @media(769px <= width){
+                width: 120px;
+                top: 1.5rem;
+            }
+        }
+    }
+}
+
+// フッターのレスポンシブ対応
+footer{
+    padding: 0 3%;
+    @media(769px <= width){
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: $footerHeight;
+    }
+    > img.logo{
+        width: 140px;
+        margin: 0.7rem 0;
+        @media(769px <= width){
+            width: 200px;
+            margin: 0;
+        }
+    }
+    ul{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5em;
+        margin-bottom: 0.7rem;
+        @media(769px <= width){
+            margin-bottom: 0;
+        }
+    }
+    > img.sns{
+        width: 120px;
+        @media(769px <= width){
+            width: 140px;
+        }
+    }
+}
+
 // 画面レイアウト
 html,
 body,
@@ -46,6 +136,12 @@ body,
     width: 100%;
     height: 100%;
 }
+.slide_item{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
 .slide_item1{
     background-image: url(../../../images/character/chara_penji.png);
 }
@@ -60,11 +156,6 @@ body,
 }
 .slide_item5{
     background-image: url(../../../images/character/chara_nyamiko.png);
-}
-.slide_item{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
 }
 
 // navigation buttons
