--- a/infographic/css/infographic.scss
+++ b/infographic/css/infographic.scss
@@ -5,21 +5,21 @@
 
 // typography
 div.pledge-item{
-    p.rank{
+    div.rank{
         font-size: 3rem;
         font-weight: bold;
         font-style: italic;
     }
-    p.pledge-name{
+    div.pledge-name{
         font-weight: bold;
         color: $White;
     }
     div.text{
-        p.catch-copy{
+        div.catch-copy{
             font-weight: bold;
             color: $Black;
         }
-        p.name{
+        div.name{
             font-size: 2rem;
             font-weight: bold;
             color: $Black;
@@ -31,31 +31,43 @@ div.pledge-item{
 }
 
 // layout
+html{
+    min-height: 100vh;
+}
 body{
-    background-image: url();
+    background-image: url(../images/bg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+    box-sizing: border-box;
 }
 div.ranking{
-    margin: 0 3% 4rem;
+    margin: 0 3% 0;
 }
 div.ranking-item{
+    background-color: $White;
     display: flex;
     width: 100%;
-    height: 13%;
+    min-height: 120px;
     border: 1px solid rgb(86, 86, 86);
     border-radius: 30px;
     box-shadow: 4px 4px;
     margin-bottom: 1rem;
     padding: 0 1rem;
+    align-items: center;
 }
 
 div.pledge-item{
     display: flex;
     align-items: center;
     width: 50%;
-    p.rank{
+    div.rank{
         margin-right: 1rem;
     }
-    p.pledge-name{
+    div.pledge-name{
         background-color: rgb(25, 25, 174);
         border-radius: 25px;
         width: 20%;
@@ -69,7 +81,7 @@ div.pledge-item{
 div.gauge{
     margin: auto 0;
     width: 50%;
-    height: 80%;
+    height: 80px;
     div.sector{
         display: flex;
         align-items: center;
@@ -90,6 +102,7 @@ div.gauge{
 div.bottom-logo{
     display: flex;
     justify-content: center;
+    margin-top: 2rem;
     img{
         width: 15%;
     }
@@ -99,3 +112,22 @@ div.bottom-logo{
 // *{
 //     border: 0.1px solid red;
 // }
+
+// animation
+div.ranking.ranking-updating {
+    position: relative;
+}
+
+div.ranking-item {
+    transition: transform 0.5s ease-in-out;
+    position: relative;
+    z-index: 1;
+}
+
+div.ranking-item.moving {
+    z-index: 10;
+}
+
+div.gauge div.sector div.now-gauge {
+    transition: width 0.5s ease-in-out;
+}
