--- a/miraire/css/module/_footer.scss
+++ b/miraire/css/module/_footer.scss
@@ -2,7 +2,7 @@
 
 footer{
     background-color: $bgColorWhite;
-    position: sticky;
+    // position: sticky;
     bottom: 0;
     padding: 0 3%;
     width: 100vw;
