--- a/miraire/css/page/vote/vote.scss
+++ b/miraire/css/page/vote/vote.scss
@@ -3,126 +3,9 @@
 @use "../../module/animation" as *;
 @use "../../module/btn" as *;
 // ページ単体に適用するスタイル
-// stickyの打ち消し
+// ヘッダー、フッターのstickyを打ち消し
 header,footer{
     position: static;
-}
-
-// ヘッダーのレスポンシブ対応
-header{
-    @media(769px <= width){
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    h1{
-        text-align: center;
-        margin-bottom: 1rem;
-        @media(769px <= width){
-            margin-left: 3%;
-            text-align: start;
-            margin-bottom: 0;
-        }
-        img.logo{
-            width: 180px;
-            @media(769px <= width){
-                width: 250px;
-            }
-        }
-    }
-    nav{
-        ul{
-            display: flex;
-            justify-content: center;
-            gap: 1em;
-            li{
-                span{
-                    display: block;
-                    text-align: center;
-                }
-            }
-        }
-    }
-    a[href="./vote.php"]{
-        text-align: right;
-        margin-right: 3%;
-        position: relative;
-        z-index: 10;
-        @media(769px <= width){
-            text-align: start;
-        }
-        img.vote{
-            width: 70px;
-            position: relative;
-            @media(769px <= width){
-                width: 120px;
-                top: 1.5rem;
-            }
-        }
-    }
-}
-
-// フッターのレスポンシブ対応
-footer{
-    padding: 0 3%;
-    @media(769px <= width){
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: $footerHeight;
-    }
-    > img.logo{
-        width: 140px;
-        margin: 0.7rem 0;
-        @media(769px <= width){
-            width: 200px;
-            margin: 0;
-        }
-    }
-    ul{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 1.5em;
-        margin-bottom: 0.7rem;
-        @media(769px <= width){
-            margin-bottom: 0;
-        }
-    }
-    > img.sns{
-        width: 120px;
-        @media(769px <= width){
-            width: 140px;
-        }
-    }
-}
-
-// 画面レイアウト
-html,
-body,
-#container{
-    height: 100%;
-    min-height: 100%;
-    width: 100%;
-    min-width: 100%;
-}
-#container{
-    display: grid;
-    grid-template-rows: $headerHeight 1fr $footerHeight;
-    grid-template-columns: 100%;
-    grid-template-areas:
-        "header"
-        "main"
-        "footer";
-    header{
-        grid-area: header;
-    }
-    main{
-        grid-area: main;
-    }
-    footer{
-        grid-area: footer;
-    }
 }
 
 main{
@@ -240,7 +123,7 @@ main{
 
 // モーダル
 .modal {
-    display: none !important;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -253,7 +136,7 @@ main{
     transition: opacity 0.3s ease, visibility 0.3s ease;
     
     &.is-active {
-        display: block !important;
+        display: block;
         visibility: visible;
         opacity: 1;
         pointer-events: auto;
@@ -416,10 +299,10 @@ main{
     left: 50%;
     transform: translateX(-50%);
     z-index: 3;
-    width: 30% !important;
-    max-width: 30% !important;
-    max-height: 30% !important;
-    height: auto !important;
+    width: 30%;
+    max-width: 30%;
+    max-height: 30%;
+    height: auto;
     opacity: 0;
     transition: top 0.9s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.6s ease-in-out;
     pointer-events: none;
