インフォグラフィック完了

--- a/infographic/css/_variable.scss
+++ b/infographic/css/_variable.scss
@@ -14,6 +14,11 @@ $bgColorGray:#ede9e6;
 $tableBgColor:#ffffff;
 $tableBorderColor:#333333;
 
+$penjiColor:#0000ff;
+$nyoroakiColor:#ff0000;
+$kokezoColor:#abae00;
+$ichiroColor:#009500;
+$nyamikoColor:#aa00ff;
 
 // ヘッダー・フッター
 $headerHeight: 100px;
