--- a/infographic/css/infographic.scss
+++ b/infographic/css/infographic.scss
@@ -1,25 +1,29 @@
 @charset "utf-8";
-
 @use "./variable" as *;
-// variable
+// DBのデータ
+// (0, '雪原ペン次') → コンビニ ： $penjiColor:#0000ff; , images/character0.png
+// (1, '虹宮ニョロ明') → 落書き ： $nyoroakiColor:#ff0000; , images/character1.png
+// (2, '鳥谷コケ蔵'), → ビアガーデン ： $kokezoColor:#fbff00; , images/character2.png
+// (3, '犬山イチ郎'), → 喫煙所 ： $ichiroColor:#3bf53b; , images/character3.png
+// (4, '猫川ニャミ子'), → ゲーミング ： $nyamikoColor:#aa00ff; , images/character4.png 
 
 // typography
 div.pledge-item{
-    div.rank{
+    p.rank{
         font-size: 3rem;
         font-weight: bold;
         font-style: italic;
     }
-    div.pledge-name{
+    p.pledge-name{
         font-weight: bold;
         color: $White;
     }
     div.text{
-        div.catch-copy{
+        p.catch-copy{
             font-weight: bold;
             color: $Black;
         }
-        div.name{
+        p.name{
             font-size: 2rem;
             font-weight: bold;
             color: $Black;
@@ -32,56 +36,185 @@ div.pledge-item{
 
 // layout
 html{
-    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
 }
 body{
+    width: 100%;
+    height: 100%;
     background-image: url(../images/bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
-    padding-top: 3rem;
-    padding-bottom: 2rem;
+}
+// グリッドレイアウト（top-lineとrankingとbottom-logo）
+div.container{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 7% 80% auto;
+    grid-template-columns: 100%;
+    grid-template-areas:
+        "top-line"
+        "ranking"
+        "bottom-logo";
+}
+div.top-line{
+    grid-area: top-line;
+    height: 100%;
+    width: 100%;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p{
+        width: 97%;
+
+        img{
+            width: 100%;
+        }
+    }
 }
 div.ranking{
-    margin: 0 3% 0;
+    grid-area: ranking;
 }
+div.bottom-logo{
+    grid-area: bottom-logo;
+}
+// グリッドレイアウト（ranking-item）
+div.ranking{
+    width: 100%;
+    height: 100%;
+    padding: 0 3% 1rem;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: 100%;
+    gap: 1rem;
+    overflow-x: hidden;
+    overflow-y: visible;
+}
+// orderプロパティで順序を制御（初期値は現在の順位）
+div.ranking-item.item-penji{
+    order: 1;
+}
+div.ranking-item.item-nyoroaki{
+    order: 2;
+}
+div.ranking-item.item-kokezo{
+    order: 3;
+}
+div.ranking-item.item-ichiro{
+    order: 4;
+}
+div.ranking-item.item-nyamiko{
+    order: 5;
+}
+
 div.ranking-item{
     background-color: $White;
-    display: flex;
+    height: 100%;
+    max-height: 100%;
     width: 100%;
-    min-height: 120px;
+    max-width: 100%;
+    box-sizing: border-box;
+    display: flex;
     border: 1px solid rgb(86, 86, 86);
     border-radius: 30px;
     box-shadow: 4px 4px;
-    margin-bottom: 1rem;
     padding: 0 1rem;
-    align-items: center;
+    overflow-x: hidden;
+    overflow-y: visible;
+    position: relative;
+    
+    // 投票数を右側に表示（疑似要素）
+    &::after{
+        content: attr(data-votes) ;
+        position: absolute;
+        right: 1rem;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 2rem;
+        font-weight: bold;
+        font-style: italic;
+        color: #bc3737a2;
+        pointer-events: none;
+        z-index: 1;
+    }
 }
-
+div.ranking-item.item-penji{
+    p.pledge-name{
+        background-color: $penjiColor;
+    }
+    div.now-gauge{
+        background-color: $penjiColor;
+    }
+}
+div.ranking-item.item-nyoroaki{
+    p.pledge-name{
+        background-color: $nyoroakiColor;
+    }
+    div.now-gauge{
+        background-color: $nyoroakiColor;
+    }
+}
+div.ranking-item.item-kokezo{
+    p.pledge-name{
+        background-color: $kokezoColor;
+        color: $Black;
+    }
+    div.now-gauge{
+        background-color: $kokezoColor;
+    }
+}
+div.ranking-item.item-ichiro{
+    p.pledge-name{
+        background-color: $ichiroColor;
+    }
+    div.now-gauge{
+        background-color: $ichiroColor;
+    }
+}
+div.ranking-item.item-nyamiko{
+    p.pledge-name{
+        background-color: $nyamikoColor;
+    }
+    div.now-gauge{
+        background-color: $nyamikoColor;
+    }
+}
 div.pledge-item{
     display: flex;
     align-items: center;
+    height: 100%;
     width: 50%;
-    div.rank{
+    min-width: 0;
+    flex-shrink: 0;
+    p.rank{
         margin-right: 1rem;
+        flex-shrink: 0;
     }
-    div.pledge-name{
-        background-color: rgb(25, 25, 174);
+    p.pledge-name{
         border-radius: 25px;
         width: 20%;
         text-align: center;
         padding: 0.3em 0;
+        flex-shrink: 0;
     }
     img{
         height: 100%;
+        width: auto;
+        max-width: 100%;
+        object-fit: contain;
+        flex-shrink: 0;
     }
 }
 div.gauge{
     margin: auto 0;
     width: 50%;
-    height: 80px;
+    min-width: 0;
+    height: 80%;
+    flex-shrink: 0;
     div.sector{
         display: flex;
         align-items: center;
@@ -94,7 +227,6 @@ div.gauge{
         div.now-gauge{
             width: 30%;//投票数に応じて変動
             height: 50%;
-            background-color: aquamarine;
             border-radius: 10px;
         }
     }
@@ -102,16 +234,12 @@ div.gauge{
 div.bottom-logo{
     display: flex;
     justify-content: center;
-    margin-top: 2rem;
+    align-items: center;
     img{
         width: 15%;
     }
 }
 
-
-// *{
-//     border: 0.1px solid red;
-// }
 
 // animation
 div.ranking.ranking-updating {
@@ -119,15 +247,19 @@ div.ranking.ranking-updating {
 }
 
 div.ranking-item {
-    transition: transform 0.5s ease-in-out;
+    transition: transform 1.5s ease-in-out;
     position: relative;
-    z-index: 1;
 }
 
-div.ranking-item.moving {
+// 移動中の要素を少し大きくする（z-indexで前面に表示）
+div.ranking-item.ranking-item-moving {
     z-index: 10;
 }
 
 div.gauge div.sector div.now-gauge {
-    transition: width 0.5s ease-in-out;
+    transition: width 0.5s ease-in-out, background-color 0.5s ease-in-out;
 }
+
+// *{
+//     border: 0.1px solid red;
+// }
