--- a/infographic copy/css/_variable.scss
+++ b/infographic copy/css/_variable.scss
@@ -14,6 +14,11 @@ $bgColorGray:#ede9e6;
 $tableBgColor:#ffffff;
 $tableBorderColor:#333333;
 
+$penjiColor:#0000ff;
+$nyoroakiColor:#ff0000;
+$kokezoColor:#fbff00;
+$ichiroColor:#3bf53b;
+$nyamikoColor:#aa00ff;
 
 // ヘッダー・フッター
 $headerHeight: 100px;
