--- a/miraire/css/module/_variable.scss
+++ b/miraire/css/module/_variable.scss
@@ -2,7 +2,7 @@
 
 // color
 $Black:#222222;
-$gray:#bbbbbb;
+$gray:#9a9a9a;
 $White:#ffffff;
 
 $Color1:#f5a83b;
@@ -16,5 +16,5 @@ $tableBorderColor:#333333;
 
 
 // ヘッダー・フッター
-$headerHeight: 100px;
+$headerHeight: 80px;
 $footerHeight: 100px;
