--- a/miraire/css/module/_btn.scss
+++ b/miraire/css/module/_btn.scss
@@ -7,9 +7,13 @@
     font-weight: bold;
     background-color: $Color1;
     border-radius: 25px;
-    opacity: 1;
-    transition: 0.3s;
-    &:hover{
-        opacity: 0.7;
-    }
+}
+.btn_white {
+    text-align: center;
+    padding: 0.8em 1em;
+    color: $Color1;
+    font-weight: bold;
+    background-color: $White;
+    border: 2px solid $Color1;
+    border-radius: 25px;
 }
