--- a/miraire/css/module/_footer.scss
+++ b/miraire/css/module/_footer.scss
@@ -11,26 +11,19 @@ footer{
         height: 100%;
         width: 100%;
         position: relative;
-        margin: 0 auto;
-        
-        @media(769px <= width){
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
     }
     div.footer-logo{
-        display: block;
-        text-align: center;
-        margin-bottom: 0.5rem;
+        position: absolute;
+        display: inline-block;
+        width: fit-content;
+        bottom: 0;
+        left: 10%;
 
         @media(769px <= width){
-            position: absolute;
-            display: inline-block;
-            width: fit-content;
             top: 50%;
             transform: translateY(-50%);
             left: 3%;
+            z-index: 10;
         }
         img.logo{
             width: 100px;
@@ -40,17 +33,26 @@ footer{
             }
         }
     }
+    div.footer-nav{
+        display: block;
+        text-align: center;
+
+        @media(769px <= width){
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
     ul{
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 1.5rem;
-        font-size: 0.6rem;
+        font-size: 0.7rem;
+        gap: 3em;
 
         @media(769px <= width){
             font-size: 1rem;
-            gap: 2em;
-            margin-bottom: 0.2rem;
         }
         a{
             display: inline-block;
@@ -58,19 +60,20 @@ footer{
         }
     }
     div.sns-link{
-        display: block;
-        text-align: center;
+        position: absolute;
+        display: inline-block;
+        width: fit-content;
+        bottom: 0;
+        right: 10%;
+        z-index: 10;
 
         @media(769px <= width){
-            position: absolute;
-            display: inline-block;
-            width: fit-content;
             top: 50%;
             transform: translateY(-50%);
             right: 3%;
         }
         img.sns{
-            width: 60px;
+            width: 80px;
 
             @media(769px <= width){
                 width: 120px;
