--- a/miraire/css/page/vote/vote.scss
+++ b/miraire/css/page/vote/vote.scss
@@ -17,8 +17,10 @@ main{
 // Swiper
 // Swiper本体
 .swiper{
+    min-height: calc(100vh - $headerHeight - $footerHeight);
     width: 100%;
     height: 100%;
+    padding: auto 0;
 }
 .swiper-wrapper,
 .swiper-slide,
@@ -30,7 +32,7 @@ main{
     overflow: visible;
 }
 .swiper-slide{
-    margin: 1rem 0;
+    margin: 2rem 0;
     transition: all 1s ease;
 
     &:not(.swiper-slide-active) {
@@ -51,20 +53,32 @@ main{
         height: auto;
     }
     .text_wrapper{
-        padding: 1rem;
+        padding-top: 2rem;
         
         p{
             text-align: center;
             font-family: "vdl-logojrblack", sans-serif;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             font-weight: 500;
             span{
-                font-size: 2.3rem;
+                font-size: 1.8rem;
+            }
+
+            @media (769px <= width) {
+                font-size: 1.3rem;
+                span{
+                    font-size: 2.3rem;
+                }
             }
         }
         button{
+            font-size: 0.9rem;
             display: block;
-            margin: 0.6rem auto 1.8rem;
+            margin: 0.6em auto 1em;
+
+            @media (769px <= width) {
+                font-size: 1rem;
+            }
         }
     }
 }
@@ -80,14 +94,21 @@ main{
 .swiper-button-prev,.swiper-button-next{
     display: grid;
     place-content: center;
-    width: 5rem;
-    height: 5rem;
+    width: 10vh;
+    height: 10vh;
+    max-width: 3rem;
+    max-height: 3rem;
     cursor: pointer;
     position: absolute;
     z-index: 1;
     top: 0;
     bottom: 0;
     margin: auto;
+
+    @media (769px <= width) {
+        max-width: 5rem;
+        max-height: 5rem;
+    }
 }
 .swiper-button-prev::before, .swiper-button-next::before {
     position: absolute;
@@ -100,8 +121,8 @@ main{
     background-color: rgba(0, 0, 0, 0.3);
 }
 .swiper-button-prev::after, .swiper-button-next::after {
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1rem;
+    height: 1rem;
     content: "";
     border: solid $White;
     border-width: 3px 3px 0 0;
@@ -115,10 +136,18 @@ main{
     transform: rotate(45deg);
 }
 .swiper-button-prev {
-    right: 50%;
+    right: 80%;
+    
+    @media (769px <= width) {
+        right: 50%;
+    }
 }
 .swiper-button-next {   
-    left: 50%;
+    left: 80%;
+
+    @media (769px <= width) {
+        left: 50%;
+    }
 }
 
 // モーダル
@@ -158,42 +187,45 @@ main{
     transform: translate(-50%, -50%);
     width: 90%;
     max-width: 500px;
-    background-image: url(../../../images/vote/popup_boxonly.svg);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
+    height: auto;
+    background-color: $White;
+    // background-image: url(../../../images/vote/popup_boxonly.svg);
+    // background-size: 100% 100%;
+    // background-repeat: no-repeat;
     padding: 2rem;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    border-radius: 1rem;
 }
 .modal-body {
-    margin-top: 1rem;
-    margin-right: 1rem;
-    padding: 1rem 0;
     text-align: center;
+    margin: auto 0;
+    margin-right: 1rem;
 }
 .modal-title {
     font-family: "vdl-logojrblack", sans-serif;
     font-size: 1.8rem;
-    font-weight: bold;
+    font-weight: normal;
     color: $Black;
     margin-bottom: 1rem;
 }
 .modal-question {
     font-family: "vdl-logojrblack", sans-serif;
     font-size: 1.2rem;
-    font-weight: bold;
+    font-weight: normal;
     color: $Black;
     margin-bottom: 1rem;
 }
 .modal-label {
+    font-family: "hiragino-kaku-gothic-pron", sans-serif;
     font-size: 1rem;
+    font-weight: bold;
     color: $Black;
     margin-bottom: 0.5rem;
 }
 
 .modal-pledge {
     font-family: "vdl-logojrblack", sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: bold;
     color: $Black;
     margin-bottom: 0.5rem;
@@ -201,7 +233,7 @@ main{
 
 .modal-character-name {
     font-family: "vdl-logojrblack", sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     color: $Black;
     margin-bottom: 2rem;
@@ -211,26 +243,26 @@ main{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    
-    @media (min-width: 600px) {
+
+    @media (769px <= width) {
+        width: 80%;
+        margin: 0 auto;
         flex-direction: row;
         justify-content: center;
     }
-}
+    .btn_white {
+        width: 100%;
 
-.btn_cancel {
-    text-align: center;
-    padding: 0.8em 1em;
-    color: $Color1;
-    font-weight: bold;
-    background-color: $White;
-    border: 2px solid $Color1;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    opacity: 1;
-    &:hover{
-        opacity: 0.7;
+        @media (769px <= width) {
+            width: fit-content;
+        }
+    }
+    .btn_mainColor {
+        width: 100%;
+
+        @media (769px <= width) {
+            width: fit-content;
+        }
     }
 }
 
