--- a/miraire/css/module/_animation.scss
+++ b/miraire/css/module/_animation.scss
@@ -10,11 +10,11 @@
 }
 
 // 濃 → 薄
-.opasity_down{
+.opacity_down{
     opacity: 1;
     transition: 0.3s;
 }
-.opasity_down:hover{
+.opacity_down:hover{
     opacity: 0.5;
 }
 
