--- a/miraire/css/page/vote/vote.scss
+++ b/miraire/css/page/vote/vote.scss
@@ -4,11 +4,12 @@
 @use "../../module/animation" as *;
 // ページ単体に適用するスタイル
 // ヘッダー、フッターのstickyを打ち消し
-header,footer{
+header{
     position: static;
 }
 
 main{
+    position: relative;
     background-image: url(../../../images/vote/bg.png);
     background-size: cover;
     background-position: center;
@@ -17,22 +18,33 @@ main{
 // Swiper
 // Swiper本体
 .swiper{
+    position: relative;
     min-height: calc(100vh - $headerHeight - $footerHeight);
     width: 100%;
     height: 100%;
-    padding: auto 0;
 }
-.swiper-wrapper,
 .swiper-slide,
 .slide_item{
     width: 100%;
     height: 100%;
 }
 .swiper-wrapper{
+    margin-top: 25%;
     overflow: visible;
+    @media(450px <= width){
+        margin-top: 18%;
+    }
+    @media(480px <= width){
+        margin-top: 12%;
+    }
+    @media(750px <= width){
+        margin-top: 8%;
+    }
+    @media(950px <= width){
+        margin-top: 2rem;
+    }
 }
 .swiper-slide{
-    margin: 2rem 0;
     transition: all 1s ease;
 
     &:not(.swiper-slide-active) {
@@ -58,10 +70,11 @@ main{
         p{
             text-align: center;
             font-family: "vdl-logojrblack", sans-serif;
-            font-size: 1.1rem;
+            line-height: 1.6;
+            font-size: 1.2rem;
             font-weight: 500;
             span{
-                font-size: 1.8rem;
+                font-size: 2rem;
             }
 
             @media (769px <= width) {
@@ -82,6 +95,31 @@ main{
         }
     }
 }
+// 左下のキャラクターのレイアウト
+div.character{
+    position: absolute;
+    bottom: -3vh;
+    left: -3vw;
+    z-index: 10;
+    width: 30vw;
+    max-width: 400px;
+    min-width: 150px;
+    @media(769px <= width){
+        bottom: -7vh;
+    }
+    img{
+        width: 100%;
+        height: auto;
+        overflow: hidden;
+    }
+}
+footer{
+    position: absolute;
+    z-index: 15;
+}
+// *{
+//     border: 0.1px solid red;
+// }
 
 // navigation buttons
 // デフォルトの矢印を削除
