--- a/miraire/css/page/voting_completed/voting_completed.scss
+++ b/miraire/css/page/voting_completed/voting_completed.scss
@@ -92,19 +92,29 @@ main{
         }
     }
     div.contents{
-        max-width: 1280px;
+        max-width: 1200px;
         @media(1000px <= width){
             display: flex;
             margin-left: auto;
             margin-right: auto;
         }
+        @media(1800px <= width){
+            max-width: 1550px;
+        }
         div.isome-img{
             width: calc(100vw - 320px - 6rem);
             min-width: 350px;
-            background-color: aquamarine;
             margin: 0 auto 2rem;
             @media(1000px <= width){
                 margin: 0;
+            }
+            img{
+                width: calc(100vw - 320px - 6rem);
+                min-width: 350px;
+                max-width: 800px;
+                @media(1800px <= width){
+                    max-width: 1100px;
+                }
             }
         }
         div.completion-message{
@@ -114,6 +124,10 @@ main{
             @media(1000px <= width){
                 margin-left: 3rem;
                 margin-right: 0;
+            }
+            @media(1800px <= width){
+                transform: scale(1.3);
+                transform-origin: top left;
             }
             h2{
                 text-align: center;
@@ -193,7 +207,3 @@ main{
         }
     }
 }
-
-// *{
-//     border: 0.1px solid red;
-// }
